# RustBackend

./: .env  Cargo.toml  default  default.pub  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  schema.rs
migrations/2024-09-06-233200_create_users/: up.sql
migrations/2024-09-07-001110_create_tables/: down.sql  up.sql
migrations/2024-09-13-073512_add_indexes/: down.sql  up.sql
src/: auth.rs  error.rs  lib.rs  main.rs  schema.rs
src/controllers/: investment_controller.rs  ledger_controller.rs  mod.rs  user_controller.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: investment_services.rs  ledger_service.rs  mod.rs  user_service.rs
src/tests/: investment_tests.rs  ledger_tests.rs  mod.rs  user_tests.rs
