[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.10"
r2d2 = "0.8"
bigdecimal = { version = "0.3", features = ["serde"] }
actix-web-httpauth = "0.8"
derive_more = "0.99"